test/Harper/Tests/Good/issue025_impureBubbleUp2.har
ref RefBox a = {
    data = {
        a :: a;
    }

    ctor :: a -> impure -> RefBox a;
    ctor a = {
        this.data.a := a;
        return this;
    };

    get :: impure -> a;
    get = this.data.a;

    set :: a -> impure -> ();
    set a = {
        this.data.a := a;
    };
};

f :: RefBox Integer -> sideeffect -> Integer;
f b = {
    eval printLn "42" () ;
    return 42;
};

main :: sideeffect -> Integer;
main = {
    (b :: RefBox Integer) = RefBox.ctor 42 ();
    return f b ();
};