test/Harper/Tests/Bad/issue025_noCtor.har
ref RefBox a = {
    data = {
        a :: a;
    }

    get :: impure -> a;
    get = this.data.a;

    set :: a -> impure -> ();
    set a = {
        this.data.a := a;
    };
};

main :: Integer;
main = {
    (b :: RefBox Integer) = RefBox.ctor 42 ();
    return b.get ();
};